force-app/main/default/objects/Case_Line_Item__c/Case_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Case Line Item</label>
    <nameField>
        <displayFormat>Panel-{0000}</displayFormat>
        <label>Case Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>