force-app/main/default/objects/Case_Line_Item__c/fields/Backer_Panel_Graphic__c.field-meta.xml
<CustomField>
    <fullName>Backer_Panel_Graphic__c</fullName>
    <label>Backer Graphic Panel or Lozier Shelf</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>InJex graphic 97082</fullName>
            </value>
            <value>
                <fullName>Boa  graphic 97079</fullName>
            </value>
            <value>
                <fullName>CuShin 97773</fullName>
            </value>
            <value>
                <fullName>DynaForce graphic 97075</fullName>
            </value>
            <value>
                <fullName>ExoFlex 97778</fullName>
            </value>
            <value>
                <fullName>FlexForce graphic 94411</fullName>
            </value>
            <value>
                <fullName>FlexLock 97783</fullName>
            </value>
            <value>
                <fullName>ForceShield graphic 97079</fullName>
            </value>
            <value>
                <fullName>Gore-Tex 97774</fullName>
            </value>
            <value>
                <fullName>IS Hunt 15 inch 97775</fullName>
            </value>
            <value>
                <fullName>IS Hunt 9 inch 97772</fullName>
            </value>
            <value>
                <fullName>ISH Lozier Shelf 97785</fullName>
            </value>
            <value>
                <fullName>ISW Lozier Shelf 97715</fullName>
            </value>
            <value>
                <fullName>King Toe graphic  97075</fullName>
            </value>
            <value>
                <fullName>King Toe graphic 97739</fullName>
            </value>
            <value>
                <fullName>LadyHawk 97776</fullName>
            </value>
            <value>
                <fullName>Primaloft graphic 97800</fullName>
            </value>
            <value>
                <fullName>RPM graphic 97799</fullName>
            </value>
            <value>
                <fullName>RW Lozier Shelf 97063</fullName>
            </value>
            <value>
                <fullName>StableFlex graphic 97738</fullName>
            </value>
            <value>
                <fullName>Thermal Boost 97777</fullName>
            </value>
            <value>
                <fullName>Thinsulate 97782</fullName>
            </value>
            <value>
                <fullName>Thinsulate graphic 97741</fullName>
            </value>
            <value>
                <fullName>Troutbrook graphic 97798</fullName>
            </value>
            <value>
                <fullName>Ultra Dry Graphic 97740</fullName>
            </value>
            <value>
                <fullName>Ultra Dry Graphic 97797</fullName>
            </value>
            <value>
                <fullName>No Feature Graphic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>