force-app/main/default/objects/Case_Line_Item__c/fields/Backer_Panel_Size__c.field-meta.xml
<CustomField>
    <fullName>Backer_Panel_Size__c</fullName>
    <label>Backer Panel Size</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Backer_Panel_Graphic__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>12 inch 97065</fullName>
            </value>
            <value>
                <fullName>15 inch 97068</fullName>
            </value>
            <value>
                <fullName>9 inch 97769</fullName>
            </value>
            <value>
                <fullName>15 inch 97770</fullName>
            </value>
            <value>
                <fullName>21 inch 97771</fullName>
            </value>
            <value>
                <fullName>12 inch 97732</fullName>
            </value>
            <value>
                <fullName>15 inch 97733</fullName>
            </value>
            <value>
                <fullName>21 inch 97064</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>