force-app/main/default/objects/Case_Line_Item__c/fields/Merchandising_System__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_System__c</fullName>
    <label>Merchandising System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slatwall</fullName>
            </value>
            <value>
                <fullName>Lozier End Cap</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>