force-app/main/default/objects/Case_Line_Item__c/fields/Panels__c.field-meta.xml
<CustomField>
    <fullName>Panels__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Line Items</relationshipLabel>
    <relationshipName>Case_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>