force-app/main/default/objects/Case_Line_Item__c/fields/Total_Backer_Panels__c.field-meta.xml
<CustomField>
    <fullName>Total_Backer_Panels__c</fullName>
    <label>Total Backer Panels</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>