force-app/main/default/objects/Case_Line_Item__c/recordTypes/Vendor_Shop_Lite_Irish_Setter_Hunt.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Shop_Lite_Irish_Setter_Hunt</fullName>
    <active>true</active>
    <label>Vendor Shop Lite Irish Setter Hunt</label>
</RecordType>