force-app/main/default/objects/Case_Line_Item__c/recordTypes/Vendor_Shop_Lite_Irish_Setter_Work.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Shop_Lite_Irish_Setter_Work</fullName>
    <active>true</active>
    <label>Vendor Shop Lite Irish Setter Work</label>
</RecordType>