force-app/main/default/objects/Case_Line_Item__c/recordTypes/Vendor_Shop_Lite_Red_Wing_Brand.recordType-meta.xml
<RecordType>
    <fullName>Vendor_Shop_Lite_Red_Wing_Brand</fullName>
    <active>true</active>
    <label>Vendor Shop Lite Red Wing Brand</label>
</RecordType>